src/kinsol/fmod/fkinsol_mod.f90

! This file was automatically generated by SWIG (http://www.swig.org).
! Version 4.0.0
!
! Do not make changes to this file unless you know what you are doing--modify
! the SWIG interface file instead.

! ---------------------------------------------------------------
! Programmer(s): Auto-generated by swig.
! ---------------------------------------------------------------
! SUNDIALS Copyright Start
! Copyright (c) 2002-2019, Lawrence Livermore National Security
! and Southern Methodist University.
! All rights reserved.
!
! See the top-level LICENSE and NOTICE files for details.
!
! SPDX-License-Identifier: BSD-3-Clause
! SUNDIALS Copyright End
! ---------------------------------------------------------------

module fkinsol_mod
 use, intrinsic :: ISO_C_BINDING
 use fsundials_types_mod
 implicit none
 private

 ! DECLARATION CONSTRUCTS
 integer(C_INT), parameter, public :: KIN_SUCCESS = 0_C_INT
 integer(C_INT), parameter, public :: KIN_INITIAL_GUESS_OK = 1_C_INT
 integer(C_INT), parameter, public :: KIN_STEP_LT_STPTOL = 2_C_INT
 integer(C_INT), parameter, public :: KIN_WARNING = 99_C_INT
 integer(C_INT), parameter, public :: KIN_MEM_NULL = -1_C_INT
 integer(C_INT), parameter, public :: KIN_ILL_INPUT = -2_C_INT
 integer(C_INT), parameter, public :: KIN_NO_MALLOC = -3_C_INT
 integer(C_INT), parameter, public :: KIN_MEM_FAIL = -4_C_INT
 integer(C_INT), parameter, public :: KIN_LINESEARCH_NONCONV = -5_C_INT
 integer(C_INT), parameter, public :: KIN_MAXITER_REACHED = -6_C_INT
 integer(C_INT), parameter, public :: KIN_MXNEWT_5X_EXCEEDED = -7_C_INT
 integer(C_INT), parameter, public :: KIN_LINESEARCH_BCFAIL = -8_C_INT
 integer(C_INT), parameter, public :: KIN_LINSOLV_NO_RECOVERY = -9_C_INT
 integer(C_INT), parameter, public :: KIN_LINIT_FAIL = -10_C_INT
 integer(C_INT), parameter, public :: KIN_LSETUP_FAIL = -11_C_INT
 integer(C_INT), parameter, public :: KIN_LSOLVE_FAIL = -12_C_INT
 integer(C_INT), parameter, public :: KIN_SYSFUNC_FAIL = -13_C_INT
 integer(C_INT), parameter, public :: KIN_FIRST_SYSFUNC_ERR = -14_C_INT
 integer(C_INT), parameter, public :: KIN_REPTD_SYSFUNC_ERR = -15_C_INT
 integer(C_INT), parameter, public :: KIN_VECTOROP_ERR = -16_C_INT
 integer(C_INT), parameter, public :: KIN_ETACHOICE1 = 1_C_INT
 integer(C_INT), parameter, public :: KIN_ETACHOICE2 = 2_C_INT
 integer(C_INT), parameter, public :: KIN_ETACONSTANT = 3_C_INT
 integer(C_INT), parameter, public :: KIN_NONE = 0_C_INT
 integer(C_INT), parameter, public :: KIN_LINESEARCH = 1_C_INT
 integer(C_INT), parameter, public :: KIN_PICARD = 2_C_INT
 integer(C_INT), parameter, public :: KIN_FP = 3_C_INT
 public :: FKINCreate
 public :: FKINInit
 public :: FKINSol
 public :: FKINSetErrHandlerFn
 public :: FKINSetErrFile
 public :: FKINSetInfoHandlerFn
 public :: FKINSetInfoFile
 public :: FKINSetUserData
 public :: FKINSetPrintLevel
 public :: FKINSetMAA
 public :: FKINSetNumMaxIters
 public :: FKINSetNoInitSetup
 public :: FKINSetNoResMon
 public :: FKINSetMaxSetupCalls
 public :: FKINSetMaxSubSetupCalls
 public :: FKINSetEtaForm
 public :: FKINSetEtaConstValue
 public :: FKINSetEtaParams
 public :: FKINSetResMonParams
 public :: FKINSetResMonConstValue
 public :: FKINSetNoMinEps
 public :: FKINSetMaxNewtonStep
 public :: FKINSetMaxBetaFails
 public :: FKINSetRelErrFunc
 public :: FKINSetFuncNormTol
 public :: FKINSetScaledStepTol
 public :: FKINSetConstraints
 public :: FKINSetSysFunc
 public :: FKINGetWorkSpace
 public :: FKINGetNumNonlinSolvIters
 public :: FKINGetNumFuncEvals
 public :: FKINGetNumBetaCondFails
 public :: FKINGetNumBacktrackOps
 public :: FKINGetFuncNorm
 public :: FKINGetStepLength
 public :: FKINGetReturnFlagName
 public :: FKINFree
 integer(C_INT), parameter, public :: KINBBDPRE_SUCCESS = 0_C_INT
 integer(C_INT), parameter, public :: KINBBDPRE_PDATA_NULL = -11_C_INT
 integer(C_INT), parameter, public :: KINBBDPRE_FUNC_UNRECVR = -12_C_INT
 public :: FKINBBDPrecInit
 public :: FKINBBDPrecGetWorkSpace
 public :: FKINBBDPrecGetNumGfnEvals
 integer(C_INT), parameter, public :: KINLS_SUCCESS = 0_C_INT
 integer(C_INT), parameter, public :: KINLS_MEM_NULL = -1_C_INT
 integer(C_INT), parameter, public :: KINLS_LMEM_NULL = -2_C_INT
 integer(C_INT), parameter, public :: KINLS_ILL_INPUT = -3_C_INT
 integer(C_INT), parameter, public :: KINLS_MEM_FAIL = -4_C_INT
 integer(C_INT), parameter, public :: KINLS_PMEM_NULL = -5_C_INT
 integer(C_INT), parameter, public :: KINLS_JACFUNC_ERR = -6_C_INT
 integer(C_INT), parameter, public :: KINLS_SUNMAT_FAIL = -7_C_INT
 integer(C_INT), parameter, public :: KINLS_SUNLS_FAIL = -8_C_INT
 public :: FKINSetLinearSolver
 public :: FKINSetJacFn
 public :: FKINSetPreconditioner
 public :: FKINSetJacTimesVecFn
 public :: FKINGetLinWorkSpace
 public :: FKINGetNumJacEvals
 public :: FKINGetNumLinFuncEvals
 public :: FKINGetNumPrecEvals
 public :: FKINGetNumPrecSolves
 public :: FKINGetNumLinIters
 public :: FKINGetNumLinConvFails
 public :: FKINGetNumJtimesEvals
 public :: FKINGetLastLinFlag
 public :: FKINGetLinReturnFlagName

! WRAPPER DECLARATIONS
interface
function FKINCreate() &
bind(C, name="KINCreate") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR) :: fresult
end function

function FKINInit(kinmem, func, tmpl) &
bind(C, name="KINInit") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
type(C_FUNPTR), value :: func
type(C_PTR), value :: tmpl
integer(C_INT) :: fresult
end function

function FKINSol(kinmem, uu, strategy, u_scale, f_scale) &
bind(C, name="KINSol") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
type(C_PTR), value :: uu
integer(C_INT), value :: strategy
type(C_PTR), value :: u_scale
type(C_PTR), value :: f_scale
integer(C_INT) :: fresult
end function

function FKINSetErrHandlerFn(kinmem, ehfun, eh_data) &
bind(C, name="KINSetErrHandlerFn") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
type(C_FUNPTR), value :: ehfun
type(C_PTR), value :: eh_data
integer(C_INT) :: fresult
end function

function FKINSetErrFile(kinmem, errfp) &
bind(C, name="KINSetErrFile") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
type(C_PTR), value :: errfp
integer(C_INT) :: fresult
end function

function FKINSetInfoHandlerFn(kinmem, ihfun, ih_data) &
bind(C, name="KINSetInfoHandlerFn") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
type(C_FUNPTR), value :: ihfun
type(C_PTR), value :: ih_data
integer(C_INT) :: fresult
end function

function FKINSetInfoFile(kinmem, infofp) &
bind(C, name="KINSetInfoFile") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
type(C_PTR), value :: infofp
integer(C_INT) :: fresult
end function

function FKINSetUserData(kinmem, user_data) &
bind(C, name="KINSetUserData") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
type(C_PTR), value :: user_data
integer(C_INT) :: fresult
end function

function FKINSetPrintLevel(kinmemm, printfl) &
bind(C, name="KINSetPrintLevel") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmemm
integer(C_INT), value :: printfl
integer(C_INT) :: fresult
end function

function FKINSetMAA(kinmem, maa) &
bind(C, name="KINSetMAA") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG), value :: maa
integer(C_INT) :: fresult
end function

function FKINSetNumMaxIters(kinmem, mxiter) &
bind(C, name="KINSetNumMaxIters") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG), value :: mxiter
integer(C_INT) :: fresult
end function

function FKINSetNoInitSetup(kinmem, noinitsetup) &
bind(C, name="KINSetNoInitSetup") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
logical(C_BOOL), value :: noinitsetup
integer(C_INT) :: fresult
end function

function FKINSetNoResMon(kinmem, nonniresmon) &
bind(C, name="KINSetNoResMon") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
logical(C_BOOL), value :: nonniresmon
integer(C_INT) :: fresult
end function

function FKINSetMaxSetupCalls(kinmem, msbset) &
bind(C, name="KINSetMaxSetupCalls") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG), value :: msbset
integer(C_INT) :: fresult
end function

function FKINSetMaxSubSetupCalls(kinmem, msbsetsub) &
bind(C, name="KINSetMaxSubSetupCalls") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG), value :: msbsetsub
integer(C_INT) :: fresult
end function

function FKINSetEtaForm(kinmem, etachoice) &
bind(C, name="KINSetEtaForm") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_INT), value :: etachoice
integer(C_INT) :: fresult
end function

function FKINSetEtaConstValue(kinmem, eta) &
bind(C, name="KINSetEtaConstValue") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
real(C_DOUBLE), value :: eta
integer(C_INT) :: fresult
end function

function FKINSetEtaParams(kinmem, egamma, ealpha) &
bind(C, name="KINSetEtaParams") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
real(C_DOUBLE), value :: egamma
real(C_DOUBLE), value :: ealpha
integer(C_INT) :: fresult
end function

function FKINSetResMonParams(kinmem, omegamin, omegamax) &
bind(C, name="KINSetResMonParams") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
real(C_DOUBLE), value :: omegamin
real(C_DOUBLE), value :: omegamax
integer(C_INT) :: fresult
end function

function FKINSetResMonConstValue(kinmem, omegaconst) &
bind(C, name="KINSetResMonConstValue") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
real(C_DOUBLE), value :: omegaconst
integer(C_INT) :: fresult
end function

function FKINSetNoMinEps(kinmem, nomineps) &
bind(C, name="KINSetNoMinEps") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
logical(C_BOOL), value :: nomineps
integer(C_INT) :: fresult
end function

function FKINSetMaxNewtonStep(kinmem, mxnewtstep) &
bind(C, name="KINSetMaxNewtonStep") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
real(C_DOUBLE), value :: mxnewtstep
integer(C_INT) :: fresult
end function

function FKINSetMaxBetaFails(kinmem, mxnbcf) &
bind(C, name="KINSetMaxBetaFails") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG), value :: mxnbcf
integer(C_INT) :: fresult
end function

function FKINSetRelErrFunc(kinmem, relfunc) &
bind(C, name="KINSetRelErrFunc") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
real(C_DOUBLE), value :: relfunc
integer(C_INT) :: fresult
end function

function FKINSetFuncNormTol(kinmem, fnormtol) &
bind(C, name="KINSetFuncNormTol") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
real(C_DOUBLE), value :: fnormtol
integer(C_INT) :: fresult
end function

function FKINSetScaledStepTol(kinmem, scsteptol) &
bind(C, name="KINSetScaledStepTol") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
real(C_DOUBLE), value :: scsteptol
integer(C_INT) :: fresult
end function

function FKINSetConstraints(kinmem, constraints) &
bind(C, name="KINSetConstraints") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
type(C_PTR), value :: constraints
integer(C_INT) :: fresult
end function

function FKINSetSysFunc(kinmem, func) &
bind(C, name="KINSetSysFunc") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
type(C_FUNPTR), value :: func
integer(C_INT) :: fresult
end function

function FKINGetWorkSpace(kinmem, lenrw, leniw) &
bind(C, name="KINGetWorkSpace") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG) :: lenrw
integer(C_LONG) :: leniw
integer(C_INT) :: fresult
end function

function FKINGetNumNonlinSolvIters(kinmem, nniters) &
bind(C, name="KINGetNumNonlinSolvIters") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG) :: nniters
integer(C_INT) :: fresult
end function

function FKINGetNumFuncEvals(kinmem, nfevals) &
bind(C, name="KINGetNumFuncEvals") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG) :: nfevals
integer(C_INT) :: fresult
end function

function FKINGetNumBetaCondFails(kinmem, nbcfails) &
bind(C, name="KINGetNumBetaCondFails") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG) :: nbcfails
integer(C_INT) :: fresult
end function

function FKINGetNumBacktrackOps(kinmem, nbacktr) &
bind(C, name="KINGetNumBacktrackOps") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG) :: nbacktr
integer(C_INT) :: fresult
end function

function FKINGetFuncNorm(kinmem, fnorm) &
bind(C, name="KINGetFuncNorm") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
real(C_DOUBLE) :: fnorm
integer(C_INT) :: fresult
end function

function FKINGetStepLength(kinmem, steplength) &
bind(C, name="KINGetStepLength") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
real(C_DOUBLE) :: steplength
integer(C_INT) :: fresult
end function

function FKINGetReturnFlagName(flag) &
bind(C, name="KINGetReturnFlagName") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
integer(C_LONG), value :: flag
type(C_PTR) :: fresult
end function

subroutine FKINFree(kinmem) &
bind(C, name="KINFree")
use, intrinsic :: ISO_C_BINDING
type(C_PTR) :: kinmem
end subroutine

function FKINBBDPrecInit(kinmem, nlocal, mudq, mldq, mukeep, mlkeep, dq_rel_uu, gloc, gcomm) &
bind(C, name="KINBBDPrecInit") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_INT64_T), value :: nlocal
integer(C_INT64_T), value :: mudq
integer(C_INT64_T), value :: mldq
integer(C_INT64_T), value :: mukeep
integer(C_INT64_T), value :: mlkeep
real(C_DOUBLE), value :: dq_rel_uu
type(C_FUNPTR), value :: gloc
type(C_FUNPTR), value :: gcomm
integer(C_INT) :: fresult
end function

function FKINBBDPrecGetWorkSpace(kinmem, lenrwbbdp, leniwbbdp) &
bind(C, name="KINBBDPrecGetWorkSpace") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG) :: lenrwbbdp
integer(C_LONG) :: leniwbbdp
integer(C_INT) :: fresult
end function

function FKINBBDPrecGetNumGfnEvals(kinmem, ngevalsbbdp) &
bind(C, name="KINBBDPrecGetNumGfnEvals") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG) :: ngevalsbbdp
integer(C_INT) :: fresult
end function

function FKINSetLinearSolver(kinmem, ls, a) &
bind(C, name="KINSetLinearSolver") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
type(C_PTR), value :: ls
type(C_PTR), value :: a
integer(C_INT) :: fresult
end function

function FKINSetJacFn(kinmem, jac) &
bind(C, name="KINSetJacFn") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
type(C_FUNPTR), value :: jac
integer(C_INT) :: fresult
end function

function FKINSetPreconditioner(kinmem, psetup, psolve) &
bind(C, name="KINSetPreconditioner") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
type(C_FUNPTR), value :: psetup
type(C_FUNPTR), value :: psolve
integer(C_INT) :: fresult
end function

function FKINSetJacTimesVecFn(kinmem, jtv) &
bind(C, name="KINSetJacTimesVecFn") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
type(C_FUNPTR), value :: jtv
integer(C_INT) :: fresult
end function

function FKINGetLinWorkSpace(kinmem, lenrwls, leniwls) &
bind(C, name="KINGetLinWorkSpace") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG) :: lenrwls
integer(C_LONG) :: leniwls
integer(C_INT) :: fresult
end function

function FKINGetNumJacEvals(kinmem, njevals) &
bind(C, name="KINGetNumJacEvals") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG) :: njevals
integer(C_INT) :: fresult
end function

function FKINGetNumLinFuncEvals(kinmem, nfevals) &
bind(C, name="KINGetNumLinFuncEvals") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG) :: nfevals
integer(C_INT) :: fresult
end function

function FKINGetNumPrecEvals(kinmem, npevals) &
bind(C, name="KINGetNumPrecEvals") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG) :: npevals
integer(C_INT) :: fresult
end function

function FKINGetNumPrecSolves(kinmem, npsolves) &
bind(C, name="KINGetNumPrecSolves") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG) :: npsolves
integer(C_INT) :: fresult
end function

function FKINGetNumLinIters(kinmem, nliters) &
bind(C, name="KINGetNumLinIters") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG) :: nliters
integer(C_INT) :: fresult
end function

function FKINGetNumLinConvFails(kinmem, nlcfails) &
bind(C, name="KINGetNumLinConvFails") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG) :: nlcfails
integer(C_INT) :: fresult
end function

function FKINGetNumJtimesEvals(kinmem, njvevals) &
bind(C, name="KINGetNumJtimesEvals") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG) :: njvevals
integer(C_INT) :: fresult
end function

function FKINGetLastLinFlag(kinmem, flag) &
bind(C, name="KINGetLastLinFlag") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: kinmem
integer(C_LONG) :: flag
integer(C_INT) :: fresult
end function

function FKINGetLinReturnFlagName(flag) &
bind(C, name="KINGetLinReturnFlagName") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
integer(C_LONG), value :: flag
type(C_PTR) :: fresult
end function

end interface


end module
